@@ -1,3 +1,12 @@
+2012-07-12  Dana Jansens  <danakj@chromium.org>
+
+        [chromium] The root layer should not try create a second RenderSurface for itself
+        https://bugs.webkit.org/show_bug.cgi?id=91124
+
+        Reviewed by Adrienne Walker.
+
+        * tests/CCLayerTreeHostImplTest.cpp:
+
 2012-07-12  Eric Penner  <epenner@google.com>
 
         [chromium] Use CCTexture/TextureAllocator and remove TextureManager
