@@ -1,3 +1,15 @@
+2012-07-12  Dana Jansens  <danakj@chromium.org>
+
+        [chromium] The root layer should not try create a second RenderSurface for itself
+        https://bugs.webkit.org/show_bug.cgi?id=91124
+
+        Reviewed by Adrienne Walker.
+
+        Tests: CCLayerTreeHostImplTest.rootLayerDoesntCreateExtraSurface
+
+        * platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
+        (WebCore::subtreeShouldRenderToSeparateSurface):
+
 2012-07-12  Adam Barth  <abarth@webkit.org>
 
         Regression (r122359) Layout Test html5lib/runner.html is failing
